--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
               controlslist="nodownload"
               src="https://firebasestorage.googleapis.com/v0/b/recuperacionesv4.appspot.com/o/adm1.mp4?alt=media&token=bff6af8b-549c-4b69-b72f-908404757074"
             ></video>
+            <div class="fake-video"></div>
           </div>
           <div class="clase--infoClase">
             <h3>Curso de Administracion de Pymes</h3>
